--- a/packages/binary-web/package.json
+++ b/packages/binary-web/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.7",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.5",
     "gapi-script": "^1.2.0",
     "mongodb": "^6.2.0",
     "react": "^18.2.0",
