--- a/packages/binary-node/package.json
+++ b/packages/binary-node/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "binary-node",
+  "name": "@binary/binary-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node build/server.js",
+    "start": "npm run build && node build/server.js &",
     "build": "rimraf ./build && tsc"
   },
   "keywords": [],
