--- a/packages/binary-web/package.json
+++ b/packages/binary-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "binary",
+  "name": "@binary/binary-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.7",
+    "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.5",
     "gapi-script": "^1.2.0",
@@ -29,7 +30,6 @@
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
-    "react-twitter-login": "^1.5.0",
     "storybook": "^7.5.3",
     "typescript": "*",
     "uuid": "^9.0.1",
