--- a/.github/workflows/main_binarydebates.yml
+++ b/.github/workflows/main_binarydebates.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          conduct/setup
+          yarn run build --if-present
+          yarn run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
