--- a/.github/workflows/main_binarydebates.yml
+++ b/.github/workflows/main_binarydebates.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          ./binary/conduct/setup
+          cd binary
+          conduct/setup
           yarn run build --if-present
           yarn run test --if-present
 
