--- a/.github/workflows/main_binarydebates.yml
+++ b/.github/workflows/main_binarydebates.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           yarn cache clean
           yarn run install  
-
+          yarn run build
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
