--- a/packages/binary-web/package.json
+++ b/packages/binary-web/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/storybook-addon": "^5.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,6 +22,7 @@
     "@types/uuid": "^9.0.7",
     "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "framer-motion": "^10.16.5",
     "gapi-script": "^1.2.0",
     "mongodb": "^6.2.0",
@@ -70,12 +73,15 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^40.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-storybook": "^0.6.15",
     "prop-types": "^15.8.1",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.89.0"
   }
 }
