--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "install": "yarn workspace @binary/binary-node install --network-timeout 1000000 && yarn workspace @binary/binary-web install --network-timeout 1000000",
     "build": "concurrently \"yarn workspace @binary/binary-node run build\" \"yarn workspace @binary/binary-web run build\"",
+    "serve": "concurrently \"yarn workspace @binary/binary-node run serve\" \"yarn workspace @binary/binary-web run serve\"",
     "start": "concurrently \"yarn workspace @binary/binary-node run start\" \"yarn workspace @binary/binary-web run start\""
   },
   "dependencies": {
