--- a/packages/binary-web/package.json
+++ b/packages/binary-web/package.json
@@ -39,6 +39,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "serve": "serve -s build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
