--- a/packages/binary-node/package.json
+++ b/packages/binary-node/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5",
     "@types/node": "^20.9.0",
+    "@types/passport-local": "^1.0.38",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
@@ -20,14 +22,21 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/csurf": "^1.11.5",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compose-middleware": "^5.0.1",
+    "csurf": "^1.11.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
