--- a/packages/binary-web/package.json
+++ b/packages/binary-web/package.json
@@ -20,6 +20,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.7",
+    "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.2",
     "eslint-import-resolver-typescript": "^3.6.1",
