--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "concurrently": "^8.2.2"
   },
   "tsconfig": "*",
-  "eslint-config-custom": "*"
+  "eslint-config-custom": "*",
+  "packageManager": "yarn@4.0.2",
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-standard-with-typescript": "^42.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1"
+  }
 }
