--- a/packages/binary-web/package.json
+++ b/packages/binary-web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@binary/binary-web",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
